--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,17 +22,19 @@
                 <a href="#Home">HOME</a>
                 <a href="#About">ABOUT</a>
                 <a href="#Projects">PROJECTS</a>
+                <a href="#Hobby">HOBBY</a>
             </span>
                    <ul>
-                       <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                       <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                       <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li> 
+                       <li><a href="https://www.facebook.com/share/14c8qb8kb1/?mibextid=kFxxJD"><i class="fa-brands fa-facebook-f"></i></a></li>
+                       <li><a href="https://www.instagram.com/emma.eleo_?igsh=Y3ozN2NqY2huZ3E4"><i class="fa-brands fa-instagram"></i></a></li>
+                       <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
                    </ul>
                 </nav>
                 <div id="horizontal-line"></div>
     </header>
 
     <div class="start" id="Home">
+        <img class="star" src="https://cdn.iconfinder.com/stored_data/2022779/128/png?token=1733622057-cme%2FrmWkccjt%2BxfcpenXVXwxYrb2iCAW7oMM0Z4SFmk%3D" alt="">
         <div class="circle">
            <div class="text">
             <p>WELCOME TO EMMA'S PORTFOLIO</p>
@@ -45,7 +47,7 @@
                 </div>
            </div>
         </div>
-    
+        <img class="star2" src="https://cdn.iconfinder.com/stored_data/2022779/128/png?token=1733622057-cme%2FrmWkccjt%2BxfcpenXVXwxYrb2iCAW7oMM0Z4SFmk%3D" alt="">
     </div>
 
     <div id="Projects">
@@ -89,20 +91,60 @@
                     I love painting vibrant landscapes, designing sleek websites and exploring the endless possibilities of digital art.
                 I'm always curious to discover and learn new things.   Let's create something amazing together!</p>
                    <div class="hb">
-                       <p class="head">My Hobby</p>
+                       <p class="head">Scroll down to more</p>
                        <i id="arrow" class="fa-solid fa-circle-down"></i>
                    </div>
             </div>
-            <div class="Apart">
-                <main class="art">
-                    <div><img src="jazzfinalss.jpg" alt=""></div>
-                    <div><img src="IMG_1774.jpg" alt=""></div>
-                    <div><img src="jazzfinalss.jpg" alt=""></div>
-                </main>
-
+        </div>
+    <div id="Hobby">
+            <h3>Hobbies & Interests</h3>
+            <div class="wrapper">
+                <div class="group">
+                    <img src="https://cdn3.iconfinder.com/data/icons/coffee-related/64/food_baking_bakery_bread_icon-512.png" alt="">
+                    <p>Baking</p>
+                </div>
+                <div class="group">
+                    <img src="https://cdn4.iconfinder.com/data/icons/education-and-school-10/800/painting-256.png" alt="">
+                    <p>Painting/Digital art</p>
+                </div>
+                <div class="group">
+                    <img src="https://cdn1.iconfinder.com/data/icons/dompicon-glyph-fitness-diet/256/meditation-yoga-retreat-fitness-diet-256.png" alt="">
+                    <p>Pilates</p>
+                </div>
+                <div class="group">
+                    <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-music-note-256.png" alt="">
+                    <p>Music</p>
+                </div>
+                <div class="group">
+                    <img src="https://cdn1.iconfinder.com/data/icons/essentials-pack/96/code_coding_html_css_programming-256.png" alt="">
+                    <p>Coding</p>
+                </div>
             </div>
-    </div>
-
+            <div class="gripper">
+                <div class="grip">
+                    <h4>Personal skills</h4>
+                    <p class="pull">Creativity</p>
+                    <p class="push">Teamwork</p>
+                    <p class="pull">Communication</p>
+                    <p class="push">Responsibility</p>
+                </div>
+                <div class="grip">
+                    <h4>Languages</h4>
+                    <p class="push">Mongolian-native</p>
+                    <p class="pull">English-advanced</p>
+                    <p class="push">Chinese-HSK2</p>
+                    <p class="pull">Japanese-N4</p>
+                </div>
+            </div>
+        </div>
+     <footer class="footer">
+        <div id="horizontal-line"></div>
+        <ul>
+            <li><a href="https://www.facebook.com/share/14c8qb8kb1/?mibextid=kFxxJD"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="https://www.instagram.com/emma.eleo_?igsh=Y3ozN2NqY2huZ3E4"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+        </ul>
+     </footer>
     <script src="app.js"></script>
 </body>
 </html>
